syntax = "proto3";

package order;

service OrderService {
  // Get
  rpc GetOrdersByBistro(RequestBistro) returns (OrderList) {}
  rpc GetOrdersByQR(RequestQR) returns (OrderList) {}
  // Create
  rpc CreateOrderByQR(CreateByQR) returns (CreateByQRResponse) {}
  // Update
  rpc PlaceOrder(PlaceOrderRequest) returns (Order) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (Order) {}
  // Delete
  rpc DeleteItemsByOrder(PlaceOrderRequest) returns (Order) {}
}

message Meta {
  int64 totalItems = 1;
  int64 itemCount = 2;
  int64 itemsPerPage = 3;
  int64 totalPages = 4;
  int64 currentPage = 5;
}

message PaginationRequest {
  int64 page = 1;
  int64 limit = 2;
}

message OrderItem {
 string id = 1;
 Order order = 2;
 string menuId = 3;
 int32 menuPrice = 4;
 string menuName = 5;
 string menuImage = 6;
 int32 quantity = 7;
}

message Order {
 string id = 1;
 string bistroId = 2;
 string qrcodeId = 3;
 string qrcodeName = 4;
 string createAt = 5;
 string updateAt = 6;
 string closeOderTimestamp = 7;
 bool isPaid = 8;
 repeated OrderItem items = 9;
}

message OrderList {
  repeated Order items = 1;
  Meta meta = 2;
}

message RequestQR {
  string qrcodeId = 1;
  PaginationRequest meta = 2;
}

message RequestBistro {
  string bistroId = 1;
  PaginationRequest meta = 2;
}

message CreateByQR {
 string bistroId = 1;
 string qrcodeId = 2;
}

message CreateByQRResponse {
  string id = 1;
}

message PlaceOrderRequest {
  string orderId = 1;
  repeated OrderItem items = 2;
}

message UpdateOrderStatusRequest {
  string orderId = 1;
  bool isPaid  =2; 
}